--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.0",
     "typescript": "^3.9.3"
   },
@@ -47,6 +50,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.152",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5"
   }
 }
