--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reactjs_mental_health_portal",
   "version": "0.1.0",
+  "proxy": "http://localhost:3000",
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
@@ -16,6 +17,7 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "date-fns": "^2.14.0",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -49,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.152",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5"
