--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^12.12.42",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "clsx": "^1.1.1",
     "date-fns": "^2.14.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
@@ -27,6 +28,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "styled-components": "^5.1.0",
     "typescript": "^3.9.3"
   },
