--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "date-fns": "^2.14.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
+    "material-ui-image": "^3.2.3",
+    "moment": "^2.26.0",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
