build: chartjs deps

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^12.12.42",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
     "date-fns": "^2.14.0",
     "jwt-decode": "^2.2.0",
@@ -24,6 +25,7 @@
     "moment": "^2.26.0",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
@@ -56,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.21",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.152",
     "@types/qrcode.react": "^1.0.1",
